<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.offbeat.OffbeatDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/back"/>

            <LinearLayout
                android:id="@+id/imageSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:minHeight="180dp"
                android:background="@drawable/dashed_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/placeholder_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/placeholder"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:visibility="gone"
                    android:layout_marginTop="75dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/selectorTv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Multiple Images"
                    android:layout_gravity="center"
                    android:textColor="@color/text_grey"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/selectorTv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*maximum 5"
                    android:layout_gravity="center"
                    android:textColor="@color/text_grey"
                    android:textSize="14sp"
                    android:layout_marginBottom="30dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/select_pics_rv"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/imageSelector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location Name"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/locationNameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/edittext_hint"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_background"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="6dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="State"
                            android:textSize="18sp"/>

                        <EditText
                            android:id="@+id/stateEdt"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="state"
                            android:layout_marginTop="6dp"
                            android:textSize="16sp"
                            android:background="@drawable/edit_text_background"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="City"
                            android:textSize="18sp"/>

                        <EditText
                            android:id="@+id/cityEdt"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="city"
                            android:layout_marginTop="6dp"
                            android:textSize="16sp"
                            android:background="@drawable/edit_text_background"/>

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description"
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"/>

                <EditText
                    android:id="@+id/descriptionEdt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/description_hint"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_background"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="6dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Stay Duration"
                            android:textSize="18sp"/>

                        <EditText
                            android:id="@+id/durationEdt"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/duration_hint"
                            android:layout_marginTop="6dp"
                            android:textSize="16sp"
                            android:background="@drawable/edit_text_background"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Best Time"
                            android:textSize="18sp"/>

                        <EditText
                            android:id="@+id/bestTimeEdt"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/best_time_hint"
                            android:layout_marginTop="6dp"
                            android:textSize="16sp"
                            android:background="@drawable/edit_text_background"/>

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add A Note For Directions"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/directionNotesEdt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/direction_guide_hint"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_background"/>

                <Button
                    android:id="@+id/btn_mark_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="12dp"
                    android:text="Mark Location on Map"
                    android:backgroundTint="@color/primary_color"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="6dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Latitude"
                            android:textSize="18sp"/>

                        <EditText
                            android:id="@+id/latitudeEdt"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="6dp"
                            android:hint="0.0"
                            android:textSize="16sp"
                            android:enabled="false"
                            android:background="@drawable/edit_text_background"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Longitude"
                            android:textSize="18sp"/>

                        <EditText
                            android:id="@+id/longitudeEdt"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="6dp"
                            android:hint="0.0"
                            android:textSize="16sp"
                            android:enabled="false"
                            android:background="@drawable/edit_text_background"/>

                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/btnUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Upload"
                    android:layout_marginVertical="16dp"
                    android:backgroundTint="@color/primary_color"/>

                <ProgressBar
                    android:id="@+id/progressBarUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>